[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/entity/wolf/wolf.png" type="Texture" id=1]
[ext_resource path="res://entity/fx/health_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://entity/wolf.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 320, 64, 64, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 320, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 384, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 448, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 512, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 576, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 320, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 384, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 448, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 512, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 576, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 320, 160, 64, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 384, 160, 64, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 448, 160, 64, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 512, 160, 64, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 576, 160, 64, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "run",
"speed": 9.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 51, 30 )

[node name="wolf" type="KinematicBody2D"]
collision/safe_margin = 0.01
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 34 )

[node name="RayCastLeft2" type="RayCast2D" parent="."]
position = Vector2( -47, 19 )
enabled = true
cast_to = Vector2( -10, -0.006 )
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -70, 0 )
enabled = true
cast_to = Vector2( 0, 200 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 70, 0 )
enabled = true
cast_to = Vector2( 0, 200 )

[node name="RayCastRight2" type="RayCast2D" parent="."]
position = Vector2( 47, 19 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="health_bar" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, -55 )
scale = Vector2( 2, 1.5 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
